--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
+    "react-redux": "^9.1.2",
     "react-router": "6",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
